# minx-hermes

./: README.md  pyproject.toml
cron/: jobs.snapshot.json
docs/: discord-flow-smoke-runbook.md  hermes-investigation-runtime-contract.md  minx-investigation-tool-catalog.md  slice8-handoff.md
docs/plans/: 2026-04-01-hermes-infrastructure.md
hermes_loop/: __init__.py  mcp_clients.py  policies.py  runtime.py  tool_schemas.py
scripts/: configure-finance-import-flow.sh  minx-investigate-once.py  minx-investigate.py  minx_flow_config.py  smoke-investigations.sh  smoke-playbooks.sh  snapshot-cron-jobs.sh
skills/minx/daily-review/: SKILL.md
skills/minx/finance-import/: SKILL.md
skills/minx/goal-nudge/: SKILL.md
skills/minx/investigate/: SKILL.md
skills/minx/memory-review/: SKILL.md
skills/minx/onboard-entity/: SKILL.md
skills/minx/plan/: SKILL.md
skills/minx/retro/: SKILL.md
skills/minx/weekly-review/: SKILL.md
skills/minx/wiki-update/: SKILL.md
tests/: conftest.py  test_investigation_replay.py  test_mcp_clients.py  test_minx_flow_config.py  test_policies.py  test_project_metadata.py  test_runner_config.py  test_runtime.py  test_runtime_against_real_core.py
