[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minx-hermes"
version = "0.1.0"
description = "Hermes overlay and investigation loop for Minx"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "mcp[cli]>=1.13.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
include = ["hermes_loop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
